--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This project is seriously awesome, you guys.
-This project will help Treehouse students learn about working with the git repositiries.
+This project will help Treehouse students totally  learn about working with the git repositiries.
